--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ html{
   scroll-behavior: smooth;
 }
 body{
-  text-align: center;
   margin: auto;
 }
 h1 {
@@ -17,7 +16,11 @@ h3 {
 p {
   font-size: 3vh;
 }
-.teal-section {
+a {
+  color:#102a3e;
+}
+.pink-section {
+  text-align: center;
   background-color: #ff8385;
   color: white;
   min-height: 100vh;
@@ -26,6 +29,7 @@ p {
   justify-content: center;
 }
 .white-section{
+  text-align: center;
   color: #102a3e;
   min-height: 100vh;
   display: flex;
@@ -39,8 +43,15 @@ p {
 
 /* Navigation */
 nav{
-  color: white;
+  font-size: 1.2em !important;
+  font-weight: 500;
   background-color: #102a3e;
+}
+.nav-link:hover{
+  color: white !important;
+}
+.navbar-toggler{
+  border: none !important;
 }
 
 /* Footer */
@@ -84,10 +95,132 @@ footer{
   justify-content: space-around;
 }
 .widget{
-  border-radius: 10%;
+  position:relative;
+  border-radius: 5%;
   overflow: hidden;
   height: 300px;
-  width: 300px;
+  width: 400px;
+  margin: 10px;
+  transition: 1s ease;
+}
+
+/* Image hover effect */
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+  background: #102a3e;
+}
+
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  padding: 50px 20px;
+}
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: calc(100% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.hovereffect:hover img {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 0.5em 0;
+  background-color: transparent;
+}
+
+.hovereffect h2:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
+}
+
+.hovereffect:hover h2:after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect a, .hovereffect p {
+  color: #FFF;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%,0,0);
+  transform: translate3d(100%,0,0);
+}
+
+.hovereffect:hover a, .hovereffect:hover p {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+/* Modal */
+.dark-blue{
+  color: #102a3e !important;
+}
+.btn-close{
+  background-color: transparent;
+  border-color: #102a3e;
+  font-size: 18px;
+  font-weight: 500;
+  border-width: 2px;
+  color: #102a3e;
+  border-radius: 270000px;
+  padding-left: calc(1em + 0.25em);
+  padding-right: calc(1em + 0.25em);
+  transition: 0.3s ease;
+}
+.btn-close:hover{
+  background-color: #102a3e;
+}
+.btn-close:hover >a{
+  color: white;
+}
+.btn-close > a:hover{
+  text-decoration: none;
+}
+.modal-img{
+  border-radius: 5%;
+  overflow: hidden;
 }
 
 /* About */
