--- a/css/styles.css
+++ b/css/styles.css
@@ -104,14 +104,16 @@ footer {
   width: 100%; }
 
 .blue-link {
-  color: #102a3e !important; }
+  color: #102a3e !important;
+  transition: 0.3s; }
   .blue-link:hover {
     color: #9fcabf !important; }
 
 .white-link {
   color: white !important; }
   .white-link:hover {
-    color: #102a3e !important; }
+    color: #102a3e !important;
+    transition: 0.5s; }
 
 .widgets {
   display: flex;
@@ -159,7 +161,8 @@ footer {
 
 .modal-img {
   border-radius: 5%;
-  overflow: hidden; }
+  overflow: hidden;
+  max-width: 50vw; }
 
 /* About */
 #about {
@@ -182,8 +185,7 @@ footer {
   overflow: hidden;
   position: relative;
   text-align: center;
-  cursor: default;
-  background: #102a3e; }
+  cursor: default; }
 
 .hovereffect .overlay {
   width: 100%;
@@ -192,66 +194,64 @@ footer {
   overflow: hidden;
   top: 0;
   left: 0;
-  padding: 50px 20px; }
+  background-color: rgba(117, 116, 116, 0.3);
+  -webkit-transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81);
+  transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81); }
+
+.hovereffect:hover .overlay {
+  background-color: rgba(159, 202, 191, 0.4); }
 
 .hovereffect img {
   display: block;
   position: relative;
-  max-width: none;
-  width: calc(100% + 20px);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-10px, 0, 0);
-  transform: translate3d(-10px, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
-
-.hovereffect:hover img {
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
+  width: 100%; }
 
 .hovereffect h3 {
   text-transform: uppercase;
   color: #fff;
   text-align: center;
   position: relative;
-  overflow: hidden;
-  padding: 0.5em 0;
-  background-color: transparent; }
+  font-size: 17px;
+  padding: 10px;
+  background: rgba(16, 42, 62, 0.6);
+  -webkit-transform: translateY(45px);
+  -ms-transform: translateY(45px);
+  transform: translateY(45px);
+  -webkit-transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81);
+  transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81); }
 
-.hovereffect h3:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #fff;
-  content: '';
-  -webkit-transition: -webkit-transform 0.35s;
-  transition: transform 0.35s;
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0); }
+.hovereffect:hover h3 {
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px); }
 
-.hovereffect:hover h3:after {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
-
-.hovereffect a, .hovereffect p {
-  color: #FFF;
+.hovereffect a.info {
+  display: inline-block;
+  text-decoration: none;
+  padding: 7px 14px;
+  text-transform: uppercase;
+  color: #fff;
+  border: 1px solid #fff;
+  background-color: transparent;
   opacity: 0;
   filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0); }
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81);
+  transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81);
+  font-weight: normal;
+  padding: 100px 100px; }
 
-.hovereffect:hover a, .hovereffect:hover p {
+.hovereffect:hover a.info {
   opacity: 1;
   filter: alpha(opacity=100);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1); }
+
+.hovereffect a.info:hover {
+  box-shadow: 0 0 5px #fff; }
 
 /* Media queries */
 /* Mobile phones */
@@ -262,6 +262,9 @@ footer {
   .widget {
     width: 80vw;
     height: auto; }
+
+  .modal-img {
+    max-width: 90vw; }
 
   .projects, .experience {
     padding: 10vh 10vw; }
@@ -277,7 +280,10 @@ footer {
     flex-direction: column; }
 
   .btn-git {
-    margin: 2px; } }
+    margin: 2px; }
+
+  .hovereffect a.info {
+    padding: 60px 50px; } }
 /* iPads */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   h1 {
@@ -312,6 +318,9 @@ footer {
 
   .widget {
     width: 35vw;
-    height: auto; } }
+    height: auto; }
+
+  .hovereffect a.info {
+    padding: 80px 60px; } }
 
 /*# sourceMappingURL=styles.css.map */
