--- a/css/style.scss
+++ b/css/style.scss
@@ -24,16 +24,22 @@ html, body{
   overflow-x: hidden;
 }
 h1 {
-  font-size: 6.0vh;
+  font-size: 2.5rem;
 }
 h2 {
-  font-size: 5.0vh;
+  font-size: 2.2rem;
 }
 h3 {
-  font-size: 3.8vh;
+  font-size: 1.9rem;
+}
+h4{
+  font-size: 1.7rem;
+}
+h5{
+  font-size: 1.5rem;
 }
 p,li {
-  font-size: 3vh;
+  font-size: 1.3rem;
 }
 .carrot-section, .white-section, .mint-section, .pink-section {
   color: white;
@@ -116,7 +122,7 @@ footer{
   height: 100%;
   width: auto;
 }
-.max-heading{
+.primary-heading{
   text-transform: uppercase;
   padding: 4vh 0;
 }
@@ -308,6 +314,12 @@ footer{
 /* Media queries */
 /* Mobile phones */
 @media screen and (max-width: 480px) {
+  .primary-heading{
+    padding: 2vh 0;
+  }
+  .second-heading{
+    padding: 0 10px;
+  }
   .widgets{
     flex-direction: column;
   }
@@ -323,6 +335,9 @@ footer{
   }
   .about{
     padding: 20vh 10vw;
+  }
+  .contact{
+    padding: 5px;
   }
   #logo{
     display: none;
@@ -344,21 +359,6 @@ footer{
 @media only screen
 and (min-device-width : 768px)
 and (max-device-width : 1024px) {
-  h1 {
-    font-size: 4.5vh;
-  }
-  h2 {
-    font-size: 3vh;
-  }
-  h3 {
-    font-size: 2.2vh;
-  }
-  h4{
-    font-size: 2vh;
-  }
-  p,li {
-    font-size: 1.7vh;
-  }
   #logo{
     display: none;
   }
