--- a/css/style.scss
+++ b/css/style.scss
@@ -106,8 +106,7 @@ footer{
   );
 }
 .intro{
-  padding-top: 25vh;
-  padding-bottom: 20vh;
+  padding: 25vh 15vw;
 }
 .avatar-wrapper{
   width: 15em;
@@ -317,8 +316,8 @@ footer{
   .primary-heading{
     padding: 2vh 0;
   }
-  .second-heading{
-    padding: 0 10px;
+  .intro{
+    padding: 0 20px;
   }
   .widgets{
     flex-direction: column;
