--- a/css/style.scss
+++ b/css/style.scss
@@ -197,6 +197,12 @@ footer{
   overflow: hidden;
   max-width: 50vw;
 }
+.modal-video{
+  border-radius: 5%;
+  overflow: hidden;
+  width: 500px;
+  height: 300px;
+}
 
 /* About */
 #about{
@@ -350,6 +356,10 @@ footer{
   }
   .hovereffect a.info {
     padding: 60px 50px;
+  }
+  .modal-video{
+    width: 300px;
+    height: 200px;
   }
 }
 
