--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,12 @@ footer {
   overflow: hidden;
   max-width: 50vw; }
 
+.modal-video {
+  border-radius: 5%;
+  overflow: hidden;
+  width: 500px;
+  height: 300px; }
+
 /* About */
 #about {
   position: relative;
@@ -297,7 +303,11 @@ footer {
     margin: 2px; }
 
   .hovereffect a.info {
-    padding: 60px 50px; } }
+    padding: 60px 50px; }
+
+  .modal-video {
+    width: 300px;
+    height: 200px; } }
 /* iPads */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   #logo {
