--- a/css/style.scss
+++ b/css/style.scss
@@ -59,6 +59,7 @@ p,li {
   color: $ocean;
   background-color: $pink;
   min-height: 150vh;
+  text-align: center;
 }
 .mint-section{
   background-color: $mint;
@@ -228,9 +229,6 @@ footer{
     0 100%
   );
 }
-.contact{
-
-}
 
 /* Image hover effect */
 .hovereffect {
@@ -323,7 +321,7 @@ footer{
     padding: 2vh 0;
   }
   .intro{
-    padding: 0 20px;
+    padding: 120px 20px 50px 20px;
   }
   .widgets{
     flex-direction: column;
@@ -342,10 +340,7 @@ footer{
     padding: 20vh 10vw;
   }
   .contact{
-    padding: 5px;
-  }
-  #logo{
-    display: none;
+    padding: 20px;
   }
   .modal-footer{
     display: flex;
@@ -368,17 +363,11 @@ footer{
 @media only screen
 and (min-device-width : 768px)
 and (max-device-width : 1024px) {
-  #logo{
-    display: none;
-  }
   .carrot-section, .white-section{
     min-height: auto;
   }
   .pink-section, .mint-section{
     min-height: 100vh;
-  }
-  .mint-section{
-    min-height: 70vh;
   }
   .intro{
     padding-top: 15vh;
